<resources>
    <string name="app_name">SeekHealth</string>
    <string name="lbl_logo">logo</string>
    <string name="lbl_email">Correo Electrónico</string>
    <string name="lbl_password">Contraseña</string>
    <string name="lbl_send">Enviar</string>
    <string name="lbl_welcome">Bienvenido</string>
    <string name="lbl_name">Nombre</string>
    <string name="lbl_sign_in">Acceso</string>
    <string name="lbl_new">Nueva Cuenta</string>
    <string name="lbl_capture_weight">Oprima el botón para capturar peso.</string>
</resources>
