<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:id="@+id/bottomSheetLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/colorLight"
    android:padding="24dp"
    app:behavior_peekHeight="60dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_welcome"
        android:text="@string/lbl_welcome"
        android:textAppearance="@android:style/TextAppearance.Large"/>

    <RadioGroup
        android:id="@+id/rg_login"
        android:layout_width="wrap_content"
        android:layout_below="@+id/tv_welcome"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="RelativeOverlap">

        <RadioButton
            android:id="@+id/rb_access"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_sign_in"
            android:checked="true" />

        <RadioButton
            android:id="@+id/rb_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_new" />

    </RadioGroup>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/rg_login"
        android:id="@+id/et_email"
        android:inputType="textEmailAddress"
        android:hint="@string/lbl_email"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/et_email"
        android:id="@+id/et_password"
        android:inputType="textPassword"
        android:hint="@string/lbl_password"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/et_password"
        android:id="@+id/et_name"
        android:inputType="textPersonName"
        android:hint="@string/lbl_name"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/et_name"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:background="@drawable/background_button"
        android:id="@+id/bt_send"
        android:text="@string/lbl_send"/>

</RelativeLayout>
